<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cinza_claro"
    android:orientation="vertical"
    tools:context=".TelaLogin">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_Login"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"></TextView>
    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:textSize="25sp"
        android:hint="@string/hint_email"
        android:layout_marginLeft="20dp"
        android:maxLines="1"
        android:padding="20dp"
        android:textStyle="bold"
        android:inputType="textEmailAddress"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"></EditText>
    <EditText
        android:id="@+id/login_senha"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:textSize="25sp"
        android:inputType="textPassword"
        android:hint="@string/hint_Senha"
        android:layout_marginLeft="20dp"
        android:maxLines="1"
        android:padding="20dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"></EditText>

    <Button
        android:id="@+id/text_butao__logar"
        android:layout_width="match_parent"
        android:backgroundTint="@color/black"
        android:text="@string/nome_do_butao_logar"
        android:layout_marginLeft="30dp"
        android:padding="15dp"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"></Button>
    <TextView
        android:id="@+id/sem_cont_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_para_cadastro"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"></TextView>
</LinearLayout>
</androidx.core.widget.NestedScrollView>